<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_view"
        android:title="@string/view"
        app:showAsAction="ifRoom"
        app:actionViewClass="com.google.android.material.card.MaterialCardView"
        app:actionProviderClass="android.app.MediaRouteActionProvider"/>
    <item
        android:id="@+id/menu_edit"
        android:title="@string/edit"
        app:showAsAction="always"
        app:actionViewClass="com.google.android.material.card.MaterialCardView"
        app:actionProviderClass="android.app.MediaRouteActionProvider"/>
    <item
        android:id="@+id/menu_delete"
        android:title="@string/delete"
        app:showAsAction="always"
        app:actionViewClass="com.google.android.material.card.MaterialCardView"
        app:actionProviderClass="android.app.MediaRouteActionProvider"/>
</menu>