<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/relativeLayout"
    android:background="@color/white"
    android:layout_above="@+id/bottom_nav"
    tools:context=".AddActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/toolbar"
        android:background="@drawable/gradient"
        android:layout_gravity="center|bottom">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/back_ios_icon"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="45dp"
            android:importantForAccessibility="no">
        </ImageButton>

        <TextView
            android:id="@+id/addCamera"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/add_camera"
            tools:ignore="ExtraText" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="0dp"
        android:orientation="vertical"
        android:padding="20dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ShapeAppearanceOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/darkgreyoverlay"
            app:startIconTint="@color/black"
            app:cursorColor="@color/button"
            app:startIconDrawable="@drawable/router_icon">

            <EditText
                android:id="@+id/etIpAddress"
                style="@style/ShapeAppearanceOverlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip_address"
                android:textColor="@color/black"
                android:textColorHint="#d3d3d3"
                android:importantForAutofill="no"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ShapeAppearanceOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            android:textColorHint="@color/darkgreyoverlay"
            app:startIconTint="@color/black"
            app:cursorColor="@color/button"
            app:startIconDrawable="@drawable/link_icon">

            <EditText
                android:id="@+id/etStreamingPath"
                style="@style/ShapeAppearanceOverlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/streaming_channel"
                android:textColor="@color/black"
                android:importantForAutofill="no"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/ShapeAppearanceOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:hintTextColor="@color/black"
            app:cursorColor="@color/button"
            android:textColorHint="@color/darkgreyoverlay"
            app:startIconTint="@color/black"
            app:startIconDrawable="@drawable/linked_camera_icon">

            <EditText
                android:id="@+id/etcamname"
                android:layout_width="match_parent"
                android:textColorHint="#d3d3d3"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:hint="@string/camera_name"
                android:importantForAutofill="no"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ShapeAppearanceOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                app:startIconDrawable="@drawable/username_icon"
                app:hintTextColor="@color/black"
                app:cursorColor="@color/button"
                android:textColorHint="@color/darkgreyoverlay"
                app:startIconTint="@color/black"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etRtspUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:text="@string/admin"
                    android:hint="@string/username"
                    android:importantForAutofill="no"
                    android:inputType="text" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/ShapeAppearanceOverlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                app:hintTextColor="@color/black"
                app:cursorColor="@color/button"
                android:textColorHint="@color/darkgreyoverlay"
                app:startIconTint="@color/black"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/etRtspPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:importantForAutofill="no" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/testbtn"
                android:backgroundTint="@color/black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/test"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/savebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:enabled="false"
                android:backgroundTint="@color/button"
                android:text="@string/save" />

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:animateLayoutChanges="true"
            android:background="#C5C5C7"
            app:cardCornerRadius="16dp">

            <SurfaceView
                android:id="@+id/surfaceView"
                android:layout_width="match_parent"
                android:layout_height="190dp" />

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</RelativeLayout>