<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/bottom_nav"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/relativeLayout"
    android:background="@color/white"
    tools:context=".SettingsFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/toolbar"
        android:background="@drawable/gradient">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_marginBottom="30dp"
            android:layout_gravity="center|bottom"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/settings" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/aboutLinearLayout"
        android:layout_below="@+id/toolbar">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp">
        </TextView>

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/toggleSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            android:text="@string/enable_biometric_authentication"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:thumbTint="@color/white"
            app:trackTint="@color/button"
            app:trackDecorationTint="@color/white"
            tools:ignore="TextSizeCheck,TouchTargetSizeCheck">

        </com.google.android.material.materialswitch.MaterialSwitch>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:padding="16dp">
        </TextView>

    </LinearLayout>

    <Button
        android:id="@+id/about"
        style="@style/listStyle"
        android:layout_below="@id/aboutLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:textSize="15sp"
        android:padding="0dp"
        android:paddingStart="15dp"
        android:background="@color/transparent"
        android:text="@string/about"
        android:textColor="@color/black"
        tools:ignore="RtlSymmetry" />

</RelativeLayout>