<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_above="@+id/bottom_nav"
    tools:context=".ItemFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/toolbar"
        android:background="@drawable/gradient"
        android:layout_gravity="center|bottom">

        <TextView
            android:id="@+id/live_camera"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/list" />

    </com.google.android.material.appbar.MaterialToolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savedDevices"
            android:drawableLeft="@drawable/device_hub_icon"
            android:drawableTint="@color/white"
            android:text="@string/saved_devices"
            android:padding="15dp"
            android:textColor="@color/white"
            android:backgroundTint="@color/button"
            android:textSize="20sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/savedDevicesLayout"
            android:layout_margin="10dp"
            android:drawableLeft="@drawable/grid_icon"
            android:drawableTint="@color/white"
            android:padding="15dp"
            android:backgroundTint="@color/black"
            android:textColor="@color/white"
            android:text="@string/view_camera_grid"
            android:textSize="20sp"/>

    </LinearLayout>

</RelativeLayout>