<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:id="@+id/toolbar"
        android:background="@drawable/gradient"
        android:layout_gravity="center|bottom">

        <ImageButton
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/back_ios_icon"
            android:background="@color/transparent"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="45dp"
            tools:ignore="ContentDescription"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginTop="45dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textSize="20sp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:gravity="center_vertical"
            android:text="@string/about" />

    </com.google.android.material.appbar.MaterialToolbar>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bubble"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/bubble1"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="190dp"
        android:background="@drawable/bubble5"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="190dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/bubble3"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="230dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bubble4"
        android:importantForAccessibility="no" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="160dp"
        android:layout_marginTop="150dp"
        android:background="@drawable/bubble2"
        android:importantForAccessibility="no" />

    <TextView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="56dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="54dp"
        android:gravity="center"
        android:text="@string/ruru_cam_view"
        android:id="@+id/appName"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:layout_below="@id/appName"
        android:layout_marginTop="50dp"
        android:id="@+id/aboutCardView">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/android_icon"
            android:importantForAccessibility="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textSize="15sp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/app_version"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:textSize="15sp"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/version"/>

    </androidx.cardview.widget.CardView>

</RelativeLayout>